--- a/frontend/src/component/headerComponent/navbar/navbar.css
+++ b/frontend/src/component/headerComponent/navbar/navbar.css
@@ -4,7 +4,7 @@
 
 }
 .navbar input{
-    background-color:rgb(13, 94, 30);
+    background-color:rgb(4, 177, 41);
     width:25%;
     border: none;
     padding-top: 10px;
@@ -16,6 +16,13 @@
     margin-bottom: 2px;
     cursor: pointer;
     color: #fff
+}
+.navbar input:hover{
+    color:rgb(4, 177, 41);
+    background-color: #fff;
+    border: 1px solid;
+    padding-top: 9px;
+    padding-bottom: 9px;
 }
 .navbar .last{
     margin-right: 0px;
