title color changed

--- a/frontend/src/component/headerComponent/navbar/navbar.css
+++ b/frontend/src/component/headerComponent/navbar/navbar.css
@@ -4,7 +4,8 @@
 
 }
 .navbar input{
-    background-color:rgb(4, 177, 41);
+    font-family:cursive;
+    background-color:rgb(19, 182, 54);
     width:25%;
     border: none;
     padding-top: 10px;
