--- a/frontend/src/component/headerComponent/navbar/navbar.css
+++ b/frontend/src/component/headerComponent/navbar/navbar.css
@@ -3,10 +3,12 @@
     justify-content: space-between;
 
 }
-.navbar input{
+.navbar .input{
+    text-decoration: none;
+    text-align: center;
     font-family:cursive;
     background-color:rgb(19, 182, 54);
-    width:25%;
+    width:35%;
     border: none;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -16,9 +18,15 @@
     margin-top: 2px;
     margin-bottom: 2px;
     cursor: pointer;
-    color: #fff
+    color: #fff;
+    border: 1px solid rgb(19, 182, 54);;
 }
-.navbar input:hover{
+.navbar .active{
+    color:rgb(4, 177, 41);
+    background-color: #fff;
+    border-bottom: 0px;
+}
+.navbar .input:hover{
     color:rgb(4, 177, 41);
     background-color: #fff;
     border: 1px solid;
