--- a/frontend/src/component/sectionComponent/baxzarList/bazar.css
+++ b/frontend/src/component/sectionComponent/baxzarList/bazar.css
@@ -1,13 +1,26 @@
 .main{
     color: rgb(19, 101, 104);
+    display:flex;
+    flex-direction: row;
+}
+.form_data{
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: row;
+    justify-content:space-around;
+    width: 100%;
+}
+.table_data{
+    margin-left: 10px;
+    /* background-color: blueviolet; */
+    width: 100%;
+    display: flex;
 }
 form .fieldSet{
     display: flex;
-    justify-content: center;
+
 }
+
 form{
     display: flex;
     flex-direction: column;
