--- a/frontend/src/component/sectionComponent/baxzarList/bazar.css
+++ b/frontend/src/component/sectionComponent/baxzarList/bazar.css
@@ -15,6 +15,7 @@
     /* background-color: blueviolet; */
     width: 100%;
     display: flex;
+    align-items:baseline;
 }
 form .fieldSet{
     display: flex;
@@ -57,7 +58,7 @@ table caption{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
 }
-table,th,tr,td{
+table,th,tr,td,tbody{
     border-collapse: collapse;
     border: 1px solid;
     padding:10px 40px;
